tests/paczka1/small_fuzzy/20361129.err
Error in line 1: VKFSQ58G S648 81,9
Error in line 4: VKFSQ58G S345 61,5
